--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.tssexoprueba"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -29,6 +29,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
+
 }
 
 dependencies {
@@ -42,9 +47,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     //exoplayer rtsp hi
-    implementation "com.google.android.exoplayer:exoplayer-core:2.18.1"
-    implementation "com.google.android.exoplayer:exoplayer-dash:2.18.1"
-    implementation "com.google.android.exoplayer:exoplayer-ui:2.18.1"
-    implementation "com.google.android.exoplayer:exoplayer-rtsp:2.18.1"
+    //implementation "com.google.android.exoplayer:exoplayer-core:2.18.1"
+    //implementation "com.google.android.exoplayer:exoplayer-dash:2.18.1"
+    //implementation "com.google.android.exoplayer:exoplayer-ui:2.18.1"
+    //implementation "com.google.android.exoplayer:exoplayer-rtsp:2.18.1"
+
+    implementation "androidx.media3:media3-exoplayer:1.0.0-beta03"
+    implementation "androidx.media3:media3-ui:1.0.0-beta03"
+    implementation "androidx.media3:media3-exoplayer-dash:1.0.0-beta03"
+    implementation "androidx.media3:media3-exoplayer-rtsp:1.0.0-beta03"
 
 }
